--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <H1>НАРАЩИВАНИЕ РЕСНИЦ</H1>
-    <H1>ПРАЙС с ценами:</H1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSm1n50Gvfo0XELpDTfUEZdpqBdHRiAI9qewxPUakhpIIa_y_4K&usqp=CAU"/>
+    <hr>
+    <H2>ПРАЙС с ценами:</H2>
+    <img src="images.jpeg"/>
     <p>1. Классика    - <b>250 грн;</b></p>
     <p>2. Объем (2-d) - <b>300 грн;</b></p>
     <p>3. Объем (3-d) - <b>350 грн;</b></p>
@@ -15,11 +16,50 @@
     <p>4. Объем (4-d) - <b>400 грн;</b></p>
     <p>5. Объем (5-d) - <b>500 грн;</b></p>
 
-    <h2>Будь красива и желанна</h2>
+
+    <h3>Будь красива и желанна</h3>
 
     <hr>
 
+    <table border="2" width="500" height="200" align="center" cellspacing="20" bgcolor="848543">
+       <caption> WORKING HOURSE </caption>
+        <thead>
+        <tbody bgcolor="yellow">
+        <tr>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr bg bgcolor="red" align="center">
+                <td bgcolor="219495">8:00</td>
+                <td bgcolor="219495">8:00</td>
+                <td bgcolor="219495">8:00</td>
+                <td bgcolor="219495">8:00</td>
+                <td bgcolor="219495">8:00</td>
+                <td bgcolor="219495">8:00</td>
+                <td bgcolor="219495">8:00</td>
+            </tr>
+        </tbody>
+        <tbody bgcolor="red">
+        <tr align="center">
+            <td>17:00</td>
+            <td>17:00</td>
+            <td>17:00</td>
+            <td>17:00</td>
+            <td>17:00</td>
+            <td>17:00</td>
+            <td>17:00</td>
 
+        </tr>
+        </tbody>
+
+    </table>
 
 </body>
 </html>
