--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <title> НАРАЩИВАНИЕ РЕСНИЦ</title>
 </head>
 <body>
-    <H1>НАРАЩИВАНИЕ РЕСНИЦ</H1>
+    <header>
+        <nav>
+            <a href="home">Главная</a>
+            <a href="courses">Курсы</a>
+            <a href="news">Новости</a>
+            <a href="Contacts">Контакты</a>
+
+        </nav>
+
+        <H1>НАРАЩИВАНИЕ РЕСНИЦ</H1>
+    </header>
+
+
     <hr>
     <H2>ПРАЙС с ценами:</H2>
     <img src="images.jpeg"/>
+</body>
     <p>1. Классика    - <b>250 грн;</b></p>
     <p>2. Объем (2-d) - <b>300 грн;</b></p>
     <p>3. Объем (3-d) - <b>350 грн;</b></p>
@@ -17,14 +30,14 @@
     <p>5. Объем (5-d) - <b>500 грн;</b></p>
 
 
-    <h3>Будь красива и желанна</h3>
+    <h3><i>Будь красива и желанна</i></h3>
 
     <hr>
 
-    <table border="2" width="500" height="200" align="center" cellspacing="20" bgcolor="848543">
-       <caption> WORKING HOURSE </caption>
+    <table border="2" width="500" height="200" align="center" cellspacing="20" bgcolor="f962d4">
+        <caption> <b>WORKING HOURSE</b></caption>
         <thead>
-        <tbody bgcolor="yellow">
+        <tbody bgcolor="eae7d4">
         <tr>
             <th>Monday</th>
             <th>Tuesday</th>
@@ -37,16 +50,16 @@
         </thead>
         <tbody>
             <tr bg bgcolor="red" align="center">
-                <td bgcolor="219495">8:00</td>
-                <td bgcolor="219495">8:00</td>
-                <td bgcolor="219495">8:00</td>
-                <td bgcolor="219495">8:00</td>
-                <td bgcolor="219495">8:00</td>
-                <td bgcolor="219495">8:00</td>
-                <td bgcolor="219495">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
+                <td bgcolor="eae7d4">8:00</td>
             </tr>
         </tbody>
-        <tbody bgcolor="red">
+        <tbody bgcolor="6e7085">
         <tr align="center">
             <td>17:00</td>
             <td>17:00</td>
@@ -60,6 +73,33 @@
         </tbody>
 
     </table>
+
+    <form method="post" action="/register">
+
+        <h3> Оставьте заявку и мы свяжемся с Вами в течении часа </h3>
+        <BR>
+        <span>
+            Наша команда профессиональных мастеров радушно встретят Вас
+            и помогут подобрать свой индивидуальный стиль.
+        </span>
+
+        <input type="text" value="Имя">
+
+        <input type="phone" value="Телефон">
+
+        <br>
+
+        <button type="submit">
+            хОЧУ НА КОНСУЛЬТАЦИю
+        </button>
+    </form>
+
+    <footer>
+        <span>
+            <p><b><i>Kiev. str. Tarasa Shevchenko 35</b></i></p>
+        </span>
+
+        <span> <p><b><i>+38 050 050 05 07</b></p></i></span>
 
 </body>
 </html>
