--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> НАРАЩИВАНИЕ РЕСНИЦ</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -11,17 +12,15 @@
             <a href="courses">Курсы</a>
             <a href="news">Новости</a>
             <a href="Contacts">Контакты</a>
-
         </nav>
 
         <H1>НАРАЩИВАНИЕ РЕСНИЦ</H1>
     </header>
 
-
     <hr>
     <H2>ПРАЙС с ценами:</H2>
     <img src="images.jpeg"/>
-</body>
+
     <p>1. Классика    - <b>250 грн;</b></p>
     <p>2. Объем (2-d) - <b>300 грн;</b></p>
     <p>3. Объем (3-d) - <b>350 грн;</b></p>
@@ -29,24 +28,25 @@
     <p>4. Объем (4-d) - <b>400 грн;</b></p>
     <p>5. Объем (5-d) - <b>500 грн;</b></p>
 
-
     <h3><i>Будь красива и желанна</i></h3>
 
     <hr>
 
+    <caption>
+        <b>WORKING HOURSE</b>
+    </caption>
+
     <table border="2" width="500" height="200" align="center" cellspacing="20" bgcolor="f962d4">
-        <caption> <b>WORKING HOURSE</b></caption>
         <thead>
-        <tbody bgcolor="eae7d4">
-        <tr>
-            <th>Monday</th>
-            <th>Tuesday</th>
-            <th>Wednesday</th>
-            <th>Thursday</th>
-            <th>Friday</th>
-            <th>Saturday</th>
-            <th>Sunday</th>
-        </tr>
+            <tr>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+                <th>Sunday</th>
+            </tr>
         </thead>
         <tbody>
             <tr bg bgcolor="red" align="center">
@@ -58,20 +58,16 @@
                 <td bgcolor="eae7d4">8:00</td>
                 <td bgcolor="eae7d4">8:00</td>
             </tr>
+            <tr align="center">
+                <td>17:00</td>
+                <td>17:00</td>
+                <td>17:00</td>
+                <td>17:00</td>
+                <td>17:00</td>
+                <td>17:00</td>
+                <td>17:00</td>
+            </tr>
         </tbody>
-        <tbody bgcolor="6e7085">
-        <tr align="center">
-            <td>17:00</td>
-            <td>17:00</td>
-            <td>17:00</td>
-            <td>17:00</td>
-            <td>17:00</td>
-            <td>17:00</td>
-            <td>17:00</td>
-
-        </tr>
-        </tbody>
-
     </table>
 
     <form method="post" action="/register">
@@ -96,10 +92,10 @@
 
     <footer>
         <span>
-            <p><b><i>Kiev. str. Tarasa Shevchenko 35</b></i></p>
+            <p><b><i>Kiev. str. Tarasa Shevchenko 35</i></b></p>
         </span>
 
-        <span> <p><b><i>+38 050 050 05 07</b></p></i></span>
-
+        <span><p><b><i>+38 050 050 05 07</i></b></p></span>
+    </footer>
 </body>
 </html>
