--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> НАРАЩИВАНИЕ РЕСНИЦ</title>
+    <title>ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        .rightpic {
+            float: right; /* Выравнивание по правому краю */
+            margin: 0 0 5px 5px; /* Отступы вокруг фотографии */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -14,12 +20,12 @@
             <a href="Contacts">Контакты</a>
         </nav>
 
-        <H1>НАРАЩИВАНИЕ РЕСНИЦ</H1>
+        <H1>ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ</H1>
     </header>
 
     <hr>
     <H2>ПРАЙС с ценами:</H2>
-    <img src="images.jpeg"/>
+    <img src="images1.jpeg" width="650" height="450" class="rightpic"/>
 
     <p>1. Классика    - <b>250 грн;</b></p>
     <p>2. Объем (2-d) - <b>300 грн;</b></p>
@@ -33,41 +39,38 @@
     <hr>
 
     <caption>
-        <b>WORKING HOURSE</b>
+        <h4>WORKING HOURSE</h4>
     </caption>
 
-    <table border="2" width="500" height="200" align="center" cellspacing="20" bgcolor="f962d4">
-        <thead>
-            <tr>
-                <th>Monday</th>
-                <th>Tuesday</th>
-                <th>Wednesday</th>
-                <th>Thursday</th>
-                <th>Friday</th>
-                <th>Saturday</th>
-                <th>Sunday</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr bg bgcolor="red" align="center">
-                <td bgcolor="eae7d4">8:00</td>
-                <td bgcolor="eae7d4">8:00</td>
-                <td bgcolor="eae7d4">8:00</td>
-                <td bgcolor="eae7d4">8:00</td>
-                <td bgcolor="eae7d4">8:00</td>
-                <td bgcolor="eae7d4">8:00</td>
-                <td bgcolor="eae7d4">8:00</td>
-            </tr>
-            <tr align="center">
-                <td>17:00</td>
-                <td>17:00</td>
-                <td>17:00</td>
-                <td>17:00</td>
-                <td>17:00</td>
-                <td>17:00</td>
-                <td>17:00</td>
-            </tr>
-        </tbody>
+    <table>
+        <tr>
+            <td>Monday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
+        <tr>
+            <td>Tuesday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
+        <tr>
+            <td>Wednesday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
+        <tr>
+            <td>Thursday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
+        <tr>
+            <td>Friday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
+        <tr>
+            <td>Saturday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
+        <tr>
+            <td>Sunday:</td>
+            <th>8:00 - 17:00</th>
+        </tr>
     </table>
 
     <form method="post" action="/register">
