--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ</title>
+    <title></title>
     <link rel="stylesheet" href="main.css">
     <style>
         .rightpic {
@@ -12,67 +12,82 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="home">Главная</a>
-            <a href="courses">Курсы</a>
-            <a href="news">Новости</a>
-            <a href="Contacts">Контакты</a>
-        </nav>
-
+    <nav>
+        <a href="#">Home</a>  |
+        <a href="#">Courses</a>  |
+        <a href="#">News</a>  |
+        <a href="#">Contacts</a>  |
+    </nav>
+        <img src="images2.jpeg" alt="">
+    <hr>
         <H1>ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ</H1>
-    </header>
-
-    <hr>
-    <H2>ПРАЙС с ценами:</H2>
-    <img src="images1.jpeg" width="650" height="450" class="rightpic"/>
-
-    <p>1. Классика    - <b>250 грн;</b></p>
-    <p>2. Объем (2-d) - <b>300 грн;</b></p>
-    <p>3. Объем (3-d) - <b>350 грн;</b></p>
-    <p>4. Объем (4-d) - <b>400 грн;</b></p>
-    <p>4. Объем (4-d) - <b>400 грн;</b></p>
-    <p>5. Объем (5-d) - <b>500 грн;</b></p>
-
+    <img src="images1.jpeg" width="920" height="399.33" class="rightpic"/>
+    <div>
+        <table width="30%" border="1" cellpadding="4" cellspacing="0" style="float: left;">
+         <caption>Режим работы</caption>
+            <tr>
+                <td>Monday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+            <tr>
+                <td>Tuesday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+            <tr>
+                <td>Wednesday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+            <tr>
+                <td>Thursday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+            <tr>
+                <td>Friday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+            <tr>
+                <td>Saturday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+            <tr>
+                <td>Sunday:</td>
+                <th>8:00 - 17:00</th>
+            </tr>
+        </table>
+        <table width="30%" border="1" cellpadding="4" cellspacing="0">
+          <caption>Прайс-лист</caption>
+            <tr>
+                <td>Классика:</td>
+                <th><b>250 грн;</b></th>
+            </tr>
+            <tr>
+                <td>Объем (2-d):</td>
+                <th><b>300 грн;</b></th>
+            </tr>
+            <tr>
+                <td>Объем (3-d):</td>
+                <th><b>350 грн;</b></th>
+            </tr>
+            <tr>
+                <td>Объем (4-d):</td>
+                <th><b>400 грн;</b></th>
+            </tr>
+            <tr>
+                <td>Объем (5-d):</td>
+                <th><b>500 грн;</b></th>
+            </tr>
+            <tr>
+                <td>Ламинирование бровей:</td>
+                <th><b>350 грн;</b></th>
+            </tr>
+            <tr>
+                <td>Снятие ресниц:</td>
+                <th><b>50 грн;</b></th>
+            </tr>
+        </table>
+    </div>
     <h3><i>Будь красива и желанна</i></h3>
-
     <hr>
-
-    <caption>
-        <h4>WORKING HOURSE</h4>
-    </caption>
-
-    <table>
-        <tr>
-            <td>Monday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-        <tr>
-            <td>Tuesday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-        <tr>
-            <td>Wednesday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-        <tr>
-            <td>Thursday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-        <tr>
-            <td>Friday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-        <tr>
-            <td>Saturday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-        <tr>
-            <td>Sunday:</td>
-            <th>8:00 - 17:00</th>
-        </tr>
-    </table>
-
     <form method="post" action="/register">
 
         <h3> Оставьте заявку и мы свяжемся с Вами в течении часа </h3>
