--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="main.css">
-    <style>
-        .rightpic {
-            float: right; /* Выравнивание по правому краю */
-            margin: 0 0 5px 5px; /* Отступы вокруг фотографии */
-        }
-    </style>
+
 </head>
 <body>
     <nav>
@@ -21,99 +16,110 @@
         <img src="images2.jpeg" alt="">
     <hr>
         <H1>ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ</H1>
-    <img src="images1.jpeg" width="920" height="399.33" class="rightpic"/>
-    <div>
-        <table width="30%" border="1" cellpadding="4" cellspacing="0" style="float: left;">
-         <caption>Режим работы</caption>
-            <tr>
-                <td>Monday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-            <tr>
-                <td>Tuesday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-            <tr>
-                <td>Wednesday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-            <tr>
-                <td>Thursday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-            <tr>
-                <td>Friday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-            <tr>
-                <td>Saturday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-            <tr>
-                <td>Sunday:</td>
-                <th>8:00 - 17:00</th>
-            </tr>
-        </table>
-        <table width="30%" border="1" cellpadding="4" cellspacing="0">
-          <caption>Прайс-лист</caption>
-            <tr>
-                <td>Классика:</td>
-                <th><b>250 грн;</b></th>
-            </tr>
-            <tr>
-                <td>Объем (2-d):</td>
-                <th><b>300 грн;</b></th>
-            </tr>
-            <tr>
-                <td>Объем (3-d):</td>
-                <th><b>350 грн;</b></th>
-            </tr>
-            <tr>
-                <td>Объем (4-d):</td>
-                <th><b>400 грн;</b></th>
-            </tr>
-            <tr>
-                <td>Объем (5-d):</td>
-                <th><b>500 грн;</b></th>
-            </tr>
-            <tr>
-                <td>Ламинирование бровей:</td>
-                <th><b>350 грн;</b></th>
-            </tr>
-            <tr>
-                <td>Снятие ресниц:</td>
-                <th><b>50 грн;</b></th>
-            </tr>
-        </table>
+    <div class="container-1">
+        <div class="box-1">
+            <img src="images1.jpeg" width="920" height="399.33" class="rightpic"/>
+        </div>
+        <div class="box-2">
+            <table>
+             <caption>Режим работы</caption>
+                <tr>
+                    <td>Monday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+                <tr>
+                    <td>Tuesday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+                <tr>
+                    <td>Wednesday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+                <tr>
+                    <td>Thursday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+                <tr>
+                    <td>Friday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+                <tr>
+                    <td>Saturday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+                <tr>
+                    <td>Sunday:</td>
+                    <td><b>8:00 - 17:00</b></td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="box-3">
+            <table>
+              <caption>Прайс-лист</caption>
+                <tr>
+                    <td>Классика:</td>
+                    <td><b>250 грн;</b></td>
+                </tr>
+                <tr>
+                    <td>Объем (2-d):</td>
+                    <td><b>300 грн;</b></td>
+                </tr>
+                <tr>
+                    <td>Объем (3-d):</td>
+                    <td><b>350 грн;</b></td>
+                </tr>
+                <tr>
+                    <td>Объем (4-d):</td>
+                    <td><b>400 грн;</b></td>
+                </tr>
+                <tr>
+                    <td>Объем (5-d):</td>
+                    <td><b>500 грн;</b></td>
+                </tr>
+                <tr>
+                    <td>Ламинирование бровей:</td>
+                    <td><b>350 грн;</b></td>
+                </tr>
+                <tr>
+                    <td>Снятие ресниц:</td>
+                    <td><b>50 грн;</b></td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <h3><i>Будь красива и желанна</i></h3>
+
+    <h3><i>Преимущества процедуры наращивания ресниц:</i></h3>
     <hr>
-    <form method="post" action="/register">
 
-        <h3> Оставьте заявку и мы свяжемся с Вами в течении часа </h3>
-        <BR>
-        <span>
-            Наша команда профессиональных мастеров радушно встретят Вас
-            и помогут подобрать свой индивидуальный стиль.
-        </span>
-
-        <input type="text" value="Имя">
-
-        <input type="phone" value="Телефон">
-
-        <br>
-
-        <button type="submit">
-            хОЧУ НА КОНСУЛЬТАЦИю
-        </button>
-    </form>
+    <div class="container-2">
+        <div class="box-4"><b>Быстрота.</b> Вам больше не нужно тратить время на
+            уход за ресницами. Благодаря тому, что наращенные волоски уже
+            имеют определенный изгиб, никакие приспособления для завивки
+            вам не понадобятся.</div>
+        <div class="box-5"><b>Водостойкость.</b> Вашим ресничкам не страшна никакая
+            влага. В отличие от туши, искусственные волоски не оставят следов
+            на вашей коже при попадании на них воды. Вы останетесь красивой и
+            ухоженной в бане, бассейне и даже попав под ливень.
+        </div>
+        <div class="box-6"><b>Мгновенно и надолго.</b> Ресницы останутся с вами на срок до месяца,
+            а процедура их наклеивания занимает около 2 -2,5 часов. Поэтому
+            можно с уверенностью сказать, что вы в мгновение ока оказываетесь
+            обладательницей роскошных, подкрученных и густых ресниц.
+        </div>
+        <div class="box-7"><b>Долой косметику.</b> Теперь вам не нужно проводить много
+            времени перед зеркалом, добиваясь идеально длинных ресниц без
+            комочков. Необходимость в туши, тенях, подводке отпадает сама собой.
+        </div>
+    </div>
 
     <footer>
         <span>
-            <p><b><i>Kiev. str. Tarasa Shevchenko 35</i></b></p>
+            <p>Kiev. str. Tarasa Shevchenko 35</p>
+            <p>+38 050 050 05 07</p>
+            <p>lashmaker.don.ua</p>
+            <p>index 85300</p>
         </span>
-
-        <span><p><b><i>+38 050 050 05 07</i></b></p></span>
     </footer>
 </body>
 </html>
