--- a/index.html
+++ b/index.html
@@ -7,18 +7,44 @@
 
 </head>
 <body>
-    <nav>
-        <a href="#">Home</a>  |
-        <a href="#">Courses</a>  |
-        <a href="#">News</a>  |
-        <a href="#">Contacts</a>  |
-    </nav>
-        <img src="images2.jpeg" alt="">
-    <hr>
-        <H1>ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ</H1>
+    <header class="header">
+        <div class="container">
+            <div class="header_inner">
+                <div class="header_logo">
+                    <img src="images2.jpeg" alt="" width="320" height="150">
+                </div>
+                <nav class="nav">
+                    <a class="nav_link" href="#">Home</a>
+                    <a class="nav_link" href="#">Courses</a>
+                    <a class="nav_link" href="#">News</a>
+                    <a class="nav_link" href="#">Contacts</a>
+                </nav>
+            </div>
+        </div>
+        <hr>
+    </header>
+
+
+    <div class="intro">
+        <div class="containers">
+            <div class="intro_inner">
+            <H1 class="intro_title">ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ
+                лучший салон города</H1>
+            <p class="intro_subtitle">
+                „Люди могут простить человеку ум, даже талант, но красоту — никогда.“ - Моника Беллуччи
+            </p>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
     <div class="container-1">
         <div class="box-1">
-            <img src="images1.jpeg" width="920" height="399.33" class="rightpic"/>
+            <img src="images1.jpeg" width="400" height="200"/>
         </div>
         <div class="box-2">
             <table>
@@ -89,7 +115,7 @@
         </div>
     </div>
 
-    <h3><i>Преимущества процедуры наращивания ресниц:</i></h3>
+    <h2><i>Преимущества процедуры наращивания ресниц:</i></h2>
     <hr>
 
     <div class="container-2">
