--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="main.css">
-
 </head>
 <body>
     <header class="header">
@@ -23,16 +22,85 @@
         </div>
         <hr>
     </header>
-
-
     <div class="intro">
         <div class="containers">
             <div class="intro_inner">
-            <H1 class="intro_title">ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ
+                <H1 class="intro_title">ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ
                 лучший салон города</H1>
-            <p class="intro_subtitle">
-                „Люди могут простить человеку ум, даже талант, но красоту — никогда.“ - Моника Беллуччи
-            </p>
+                    <p class="intro_subtitle">
+                „Люди могут простить человеку ум, даже талант, но красоту — никогда.“<br>Моника Беллуччи
+                    </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2 class="container1">Преимущества процедуры наращивания ресниц:</h2>
+        <div class="features">
+            <div class="features_box">
+                <img class="features_icon" src="img/images1.jpeg" alt="">
+                    <h4 class="features_title">Быстрота.</h4>
+                    <div class="features_text"> Вам больше не нужно тратить время на
+                        уход за ресницами. Благодаря тому, что наращенные волоски уже
+                        имеют определенный изгиб, никакие приспособления для завивки
+                        вам не понадобятся.
+                    </div>
+            </div>
+            <div class="features_box">
+                <img class="features_icon" src="img/images2.jpeg" alt="">
+                    <h4 class="features_title">Водостойкость.</h4>
+                    <div class="features_text"> Вашим ресничкам не страшна никакая
+                        влага. В отличие от туши, искусственные волоски не оставят следов
+                        на вашей коже при попадании на них воды. Вы останетесь красивой и
+                        ухоженной в бане, бассейне и даже попав под ливень.
+                    </div>
+            </div>
+            <div class="features_box">
+                <img class="features_icon" src="img/images3.jpeg" alt="">
+                    <h4 class="features_title">Мгновенно и надолго.</h4>
+                    <div class="features_text"> Ресницы останутся с вами на срок до месяца,
+                        а процедура их наклеивания занимает около 2 -2,5 часов. Поэтому
+                        можно с уверенностью сказать, что вы в мгновение ока оказываетесь
+                        обладательницей роскошных, подкрученных и густых ресниц.
+                    </div>
+            </div>
+            <div class="features_box">
+                    <img class="features_icon" src="img/images4.jpeg" alt="">
+                    <h4 class="features_title">Долой косметику.</h4>
+                    <div class="features_text"> Теперь вам не нужно проводить много
+                        времени перед зеркалом, добиваясь идеально длинных ресниц без
+                        комочков. Необходимость в туши, тенях, подводке отпадает сама собой.
+                    </div>
+            </div>
+        </div>
+    </div>
+    <div class="works">
+        <div class="works_item">
+            <img class="works_photo" src="img 2/photo3.jpg">
+            <div class="works_content">
+                <div class="works_title">My Work</div>
+                <div class="works_text">Объем (2-d)</div>
+            </div>
+        </div>
+        <div class="works_item">
+            <img class="works_photo" src="img 2/photo1.jpg">
+            <div class="works_content">
+                <div class="works_title">My Work</div>
+                <div class="works_text">Объем (3-d)</div>
+            </div>
+        </div>
+        <div class="works_item">
+            <img class="works_photo" src="img 2/photo5.png">
+            <div class="works_content">
+                <div class="works_title">My Work</div>
+                <div class="works_text">Объем (4-d)</div>
+            </div>
+        </div>
+        <div class="works_item">
+            <img class="works_photo" src="img 2/photo2.jpeg">
+            <div class="works_content">
+                <div class="works_title">My Work</div>
+                <div class="works_text">Объем (5-d)</div>
             </div>
         </div>
     </div>
@@ -40,9 +108,7 @@
 
 
 
-
-
-    <div class="container-1">
+    <div class="container">
         <div class="box-1">
             <img src="images1.jpeg" width="400" height="200"/>
         </div>
@@ -115,29 +181,10 @@
         </div>
     </div>
 
-    <h2><i>Преимущества процедуры наращивания ресниц:</i></h2>
+
     <hr>
 
-    <div class="container-2">
-        <div class="box-4"><b>Быстрота.</b> Вам больше не нужно тратить время на
-            уход за ресницами. Благодаря тому, что наращенные волоски уже
-            имеют определенный изгиб, никакие приспособления для завивки
-            вам не понадобятся.</div>
-        <div class="box-5"><b>Водостойкость.</b> Вашим ресничкам не страшна никакая
-            влага. В отличие от туши, искусственные волоски не оставят следов
-            на вашей коже при попадании на них воды. Вы останетесь красивой и
-            ухоженной в бане, бассейне и даже попав под ливень.
-        </div>
-        <div class="box-6"><b>Мгновенно и надолго.</b> Ресницы останутся с вами на срок до месяца,
-            а процедура их наклеивания занимает около 2 -2,5 часов. Поэтому
-            можно с уверенностью сказать, что вы в мгновение ока оказываетесь
-            обладательницей роскошных, подкрученных и густых ресниц.
-        </div>
-        <div class="box-7"><b>Долой косметику.</b> Теперь вам не нужно проводить много
-            времени перед зеркалом, добиваясь идеально длинных ресниц без
-            комочков. Необходимость в туши, тенях, подводке отпадает сама собой.
-        </div>
-    </div>
+
 
     <footer>
         <span>
