--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">
-                    <img src="images2.jpeg" alt="" width="320" height="150">
+                    <img src="logo.png" alt="">
                 </div>
                 <nav class="nav">
                     <a class="nav_link" href="#">Home</a>
@@ -28,12 +28,12 @@
                 <H1 class="intro_title">ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ
                 лучший салон города</H1>
                     <p class="intro_subtitle">
-                „Люди могут простить человеку ум, даже талант, но красоту — никогда.“<br>Моника Беллуччи
+                        „Люди могут простить человеку ум, даже талант, но красоту — никогда.“<br>
+                        Моника Беллуччи
                     </p>
             </div>
         </div>
     </div>
-
     <div class="container">
         <h2 class="container1">Преимущества процедуры наращивания ресниц:</h2>
         <div class="features">
@@ -76,7 +76,7 @@
     </div>
     <div class="works">
         <div class="works_item">
-            <img class="works_photo" src="img 2/photo3.jpg">
+            <img class="works_photo" src="img 2/photo7.jpg">
             <div class="works_content">
                 <div class="works_title">My Work</div>
                 <div class="works_text">Объем (2-d)</div>
@@ -104,17 +104,10 @@
             </div>
         </div>
     </div>
-
-
-
-
-    <div class="container">
-        <div class="box-1">
-            <img src="images1.jpeg" width="400" height="200"/>
-        </div>
-        <div class="box-2">
-            <table>
-             <caption>Режим работы</caption>
+    <div class="box">
+        <div class="Mode_operation">
+            <table class="job">
+                <caption class="price">Режим работы</caption>
                 <tr>
                     <td>Monday:</td>
                     <td><b>8:00 - 17:00</b></td>
@@ -145,10 +138,9 @@
                 </tr>
             </table>
         </div>
-
-        <div class="box-3">
-            <table>
-              <caption>Прайс-лист</caption>
+        <div class="Mode_operation">
+            <table class="job">
+                <caption class="price">Прайс-лист</caption>
                 <tr>
                     <td>Классика:</td>
                     <td><b>250 грн;</b></td>
@@ -179,13 +171,8 @@
                 </tr>
             </table>
         </div>
+
     </div>
-
-
-    <hr>
-
-
-
     <footer>
         <span>
             <p>Kiev. str. Tarasa Shevchenko 35</p>
