--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
                 </div>
                 <nav class="nav">
                     <a class="nav_link" href="#">Home</a>
-                    <a class="nav_link" href="#">Courses</a>
+                    <a class="nav_link" href="Page.html">Catalog</a>
                     <a class="nav_link" href="#">News</a>
                     <a class="nav_link" href="#">Contacts</a>
                 </nav>
             </div>
         </div>
-        <hr>
     </header>
     <div class="intro">
         <div class="containers">
             <div class="intro_inner">
-                <H1 class="intro_title">ПРОФЕССИОНАЛЬНОЕ НАРАЩИВАНИЕ РЕСНИЦ
-                лучший салон города</H1>
+                <H1 class="intro_title">professional eyelash extensions</H1>
                     <p class="intro_subtitle">
                         „Люди могут простить человеку ум, даже талант, но красоту — никогда.“<br>
                         Моника Беллуччи
@@ -171,15 +169,14 @@
                 </tr>
             </table>
         </div>
-
     </div>
-    <footer>
+    <div class="footer">
         <span>
             <p>Kiev. str. Tarasa Shevchenko 35</p>
             <p>+38 050 050 05 07</p>
             <p>lashmaker.don.ua</p>
             <p>index 85300</p>
         </span>
-    </footer>
+    </div>
 </body>
 </html>
