--- a/Page.html
+++ b/Page.html
@@ -55,28 +55,84 @@
                     <div class="main_column-left">
                         <nav class="navigation">
                             <ul class="navigation_list">
-                                <ul class="navigation_item">
-                                    <div class="navigation_item_icon">
-
-                                    </div>
+                                <li class="navigation_item">
                                     <div class="navigation_item_title">
-
+                                        Eyelashes
                                     </div>
                                     <div class="navigation_item_arrow">
-
+                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
                                     </div>
-                                </ul>
+                                </li>
+                                <li class="navigation_item">
+                                    <div class="navigation_item_title">
+                                        Eyebrows
+                                    </div>
+                                    <div class="navigation_item_arrow">
+                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                    </div>
+                                </li>
+                                <li class="navigation_item">
+                                    <div class="navigation_item_title">
+                                        Tools
+                                    </div>
+                                    <div class="navigation_item_arrow">
+                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                    </div>
+                                </li>
+                                <li class="navigation_item">
+                                    <div class="navigation_item_title">
+                                        Accessories
+                                    </div>
+                                    <div class="navigation_item_arrow">
+                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                    </div>
+                                </li>
+                                <li class="navigation_item">
+                                    <div class="navigation_item_title">
+                                        Eyelash care
+                                    </div>
+                                    <div class="navigation_item_arrow">
+                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                    </div>
+                                </li>
                             </ul>
-
                         </nav>
+                        <aside class="info-block">
+                            <div class="info-block_title">
+                                Advertising
+                            </div>
+                            <div class="info-block_subtitle">
+                                Only for you
+                            </div>
+                        </aside>
                     </div>
                     <div class="main_column-right">
+                        <div class="tabs">
+                            <button class="tabs_btn"> Most Popular</button>
+                            <button class="tabs_btn">The Cheapest</button>
+                        </div>
+                        <div class="cards-wrapper">
+                            <div class="card">
+                                <div class="card_header">
 
+                                </div>
+                                <div class="card_header">
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
-    </main>
+    <div class="footer">
+        <span>
+            <p>Kiev. str. Tarasa Shevchenko 35</p>
+            <p>+38 050 050 05 07</p>
+            <p>Lashmaker.don.ua</p>
+            <p>index 85300</p>
+        </span>
+    </div>
 </body>
 </html>
