--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <span>
             <p>Kiev. str. Tarasa Shevchenko 35</p>
             <p>+38 050 050 05 07</p>
-            <p>lashmaker.don.ua</p>
+            <p>Lashmaker.don.ua</p>
             <p>index 85300</p>
         </span>
     </div>
