--- a/Page.html
+++ b/Page.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Catalog</title>
     <link rel="stylesheet" href="main.css">
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header_catalog">
@@ -43,7 +50,7 @@
                     <H1 class="intro_title1">eyelash extension materials</H1>
                 </div>
                 <div class="catalog_photo">
-                    <img class="photo" src="img 2/catalog.jpg" width="750" height="590">
+                    <img class="photo" src="img 2/catalog.jpg" width="450" height="390">
                 </div>
             </div>
         </div>
@@ -112,12 +119,62 @@
                             <button class="tabs_btn">The Cheapest</button>
                         </div>
                         <div class="cards-wrapper">
-                            <div class="card">
-                                <div class="card_header">
+                            <div class="card_header">
+                                <div class="title">New Products</div>
+                                <div class="subtitle">dolor sit amet</div>
+                            </div>
 
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="card_header">
 
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
