--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">
-                    <img src="logo.png" alt="">
+                    <img src="img/background/logo.png" alt="">
                 </div>
                 <nav class="nav">
                     <a class="nav_link" href="#">Home</a>
-                    <a class="nav_link" href="Page.html">Catalog</a>
+                    <a class="nav_link" href="catalog.html">Catalog</a>
                     <a class="nav_link" href="#">News</a>
                     <a class="nav_link" href="#">Contacts</a>
                 </nav>
@@ -74,28 +74,28 @@
     </div>
     <div class="works">
         <div class="works_item">
-            <img class="works_photo" src="img 2/photo7.jpg">
+            <img class="works_photo" src="img/photo7.jpg">
             <div class="works_content">
                 <div class="works_title">My Work</div>
                 <div class="works_text">Объем (2-d)</div>
             </div>
         </div>
         <div class="works_item">
-            <img class="works_photo" src="img 2/photo1.jpg">
+            <img class="works_photo" src="img/photo1.jpg">
             <div class="works_content">
                 <div class="works_title">My Work</div>
                 <div class="works_text">Объем (3-d)</div>
             </div>
         </div>
         <div class="works_item">
-            <img class="works_photo" src="img 2/photo5.png">
+            <img class="works_photo" src="img/photo5.png">
             <div class="works_content">
                 <div class="works_title">My Work</div>
                 <div class="works_text">Объем (4-d)</div>
             </div>
         </div>
         <div class="works_item">
-            <img class="works_photo" src="img 2/photo2.jpeg">
+            <img class="works_photo" src="img/photo2.jpeg">
             <div class="works_content">
                 <div class="works_title">My Work</div>
                 <div class="works_text">Объем (5-d)</div>
