--- a/catalog.html
+++ b/catalog.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Catalog</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style/main.css">
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
+<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>-->
 </head>
 <body>
     <header class="header_catalog">
         <div class="container_catalog">
             <div class="catalog_inner">
                 <div class="header_logo">
-                    <img src="logo.png" alt="">
+                    <img src="img/background/logo.png" alt="">
                 </div>
                 <div class="header_search">
                     <div class="header_search-input">
@@ -33,12 +33,12 @@
                     </div>
                     <div class="header_search-button">
                         <button type="submit">
-                            <img src="lypa.png">
+                            <img src="img/background/lypa.png">
                         </button>
                     </div>
                 </div>
                 <div class="header_buttons">
-                    <img src="bask.png">
+                    <img src="img/background/bask.png">
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
                     <H1 class="intro_title1">eyelash extension materials</H1>
                 </div>
                 <div class="catalog_photo">
-                    <img class="photo" src="img 2/catalog.jpg" width="450" height="390">
+                    <img class="photo" src="img/catalog.jpg" width="450" height="390">
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
                                         Eyelashes
                                     </div>
                                     <div class="navigation_item_arrow">
-                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
                                     </div>
                                 </li>
                                 <li class="navigation_item">
@@ -75,7 +75,7 @@
                                         Eyebrows
                                     </div>
                                     <div class="navigation_item_arrow">
-                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
                                     </div>
                                 </li>
                                 <li class="navigation_item">
@@ -83,7 +83,7 @@
                                         Tools
                                     </div>
                                     <div class="navigation_item_arrow">
-                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
                                     </div>
                                 </li>
                                 <li class="navigation_item">
@@ -91,7 +91,7 @@
                                         Accessories
                                     </div>
                                     <div class="navigation_item_arrow">
-                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
                                     </div>
                                 </li>
                                 <li class="navigation_item">
@@ -99,7 +99,7 @@
                                         Eyelash care
                                     </div>
                                     <div class="navigation_item_arrow">
-                                        <img class=">" src=">>>>>>>>>>>.png" width="20" height="20">
+                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
                                     </div>
                                 </li>
                             </ul>
@@ -128,7 +128,7 @@
                                 <div class="col-md-3">
                                     <div class="card">
                                         <div class="card_image">
-                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                            <img src="img/kodi/kodi.jpg" alt"">
                                         </div>
                                         <div class="card_title">Kodi</div>
                                         <div class="card_price">
@@ -141,7 +141,7 @@
                                 <div class="col-md-3">
                                     <div class="card">
                                         <div class="card_image">
-                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                            <img src="img/kodi/goldCG-200x280.jpg" alt"">
                                         </div>
                                         <div class="card_title">Kodi</div>
                                         <div class="card_price">
@@ -154,7 +154,7 @@
                                 <div class="col-md-3">
                                     <div class="card">
                                         <div class="card_image">
-                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                            <img src="img/kodi/creativCG-200x280.jpg" alt"">
                                         </div>
                                         <div class="card_title">Kodi</div>
                                         <div class="card_price">
@@ -167,7 +167,7 @@
                                 <div class="col-md-3">
                                     <div class="card">
                                         <div class="card_image">
-                                            <img src="img%20kodi/kodi.jpg" alt"">
+                                            <img src="img/kodi/kodi.jpg" alt"">
                                         </div>
                                         <div class="card_title">Kodi</div>
                                         <div class="card_price">
