--- a/catalog.html
+++ b/catalog.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Catalog</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/catalog.css">
     <!-- CSS only -->
 <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
 
@@ -13,32 +13,39 @@
 <!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>-->
 </head>
 <body>
-    <header class="header_catalog">
-        <div class="container_catalog">
-            <div class="catalog_inner">
+    <header class="header">
+        <div class="container">
+            <div class="header_container">
                 <div class="header_logo">
-                    <img src="img/background/logo.png" alt="">
+                    <img src="img/background/logo.png" alt="" height="96">
                 </div>
                 <div class="header_search">
-                    <div class="header_search-input">
-                        <input type="text" placeholder="Search goods">
+                    <div class="header_search-input-wrapper">
+                        <input class="header_search-input type="text" placeholder="Search goods">
                     </div>
                     <div class="header_search-dropdown">
                         <select name="" id="">
                             <option value="">CATEGORY</option>
                             <option value="">EYELASHES</option>
-                            <option value="">eyebrows</option>
-                            <option value="">Couch</option>
+                            <option value="">EYEBROWS</option>
+                            <option value="">COUCH</option>
                         </select>
                     </div>
-                    <div class="header_search-button">
-                        <button type="submit">
+                    <div class="header_search-wrapper">
+                        <button class="header_search-button type="submit">
                             <img src="img/background/lypa.png">
                         </button>
                     </div>
                 </div>
-                <div class="header_buttons">
-                    <img src="img/background/bask.png">
+                <div class="header_links">
+                    <div class="header_link--notify">
+                        <div class="header-link_icon"><img src="img/background/bask.png" alt="Cart"></div>
+                        <div class="header-link_text">Cart</div>
+                    </div>
+                    <div class="header_link--notify">
+                        <div class="header-link_icon"><img src="img/background/cepdce.png" alt="Wish List" height="32" width="32"></div>
+                        <div class="header-link_text">Wish List</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -50,6 +57,9 @@
                     <H1 class="intro_title1">eyelash extension materials</H1>
                 </div>
                 <div class="catalog_photo">
+                    <div class="header_button">
+
+                    </div>
                     <img class="photo" src="img/catalog.jpg" width="450" height="390">
                 </div>
             </div>
